fixed some links

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -35,7 +35,7 @@
     </figure>
     <!-- added img alt tags -->
     <!-- semantic html rework to section -->
-    <section>
+    <section id="search-engine-optimization">
       <img
         src="./assets/images/search-engine-optimization.jpg"
         alt="search engine optimization image"
@@ -44,13 +44,13 @@
       <h2>Search Engine Optimization</h2>
       <p>
         The dominance of mobile internet use means that users are searching for
-        the right business as they travel, shop, or sit on their couch at home.
+        the right business as they travel, shop, or sit on the ir couch at home.
         Search Engine Optimization (SEO) allows you to increase your visibility
         and find the right customers for your business.
       </p>
     </section>
 
-    <section>
+    <section id="online-reputation-management">
       <img
         src="./assets/images/online-reputation-management.jpg"
         alt="online reputation management image"
@@ -66,7 +66,7 @@
       </p>
     </section>
 
-    <section>
+    <section id="social-media-marketing">
       <img
         src="./assets/images/social-media-marketing.jpg"
         alt="social media marketing image"
